--- a/index.css
+++ b/index.css
@@ -1,3 +1,53 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  background-color: rgb(30, 30, 30)
+}
+
+body {
+  padding: 15px;
+  min-height: 1000px;
+  color: white;
+  font-family: Arial;
+  font-size: 10pt;
+}
+
+input {
+  background-color: rgb(30, 30, 30);
+  border: 1px solid rgb(80, 80, 80);
+  color: white;
+  padding: 5px;
+}
+
+button {
+  padding: 5px;
+  background-color: rgb(60, 60, 60);
+  border: 1px solid rgb(80, 80, 80);
+  color: white;
+}
+
 .pricing-history {
   white-space: pre;
+}
+
+.pricing-chart-container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.pricing-chart {
+  background-color:rgba(50, 50, 50, 1);
+}
+
+.control {
+  margin: 5 0 5 0;
+}
+
+#item-days {
+  width: 60px;
 }
