--- a/index.css
+++ b/index.css
@@ -34,6 +34,10 @@ button {
   white-space: pre;
 }
 
+.chart-container {
+  user-select: none;
+}
+
 .pricing-chart-container {
   position: relative;
   width: 100%;
